Changes on volume map to data on Jupyter notebook work folder

--- a/docker/trainer.yml
+++ b/docker/trainer.yml
@@ -16,6 +16,9 @@ services:
     restart: always
     ports:
       - 8888:8888
+    volumes:
+      - ${PWD}/data:/home/jovyan/work/data
+      - ${PWD}/notebooks:/home/jovyan/work
   preprocess:
     environment:
       - PYTHONUNBUFFERED=1
